@@ -1,0 +1,12 @@
+     |-----handy-ruler------------------------------------------------------|
+aMule: aMule (multiplatform ed2k client)
+aMule:
+aMule: aMule is a multiplatform ed2k client, fork of the eMule client,
+aMule: using the wxWidgets class library, supporting Linux, *BSD platforms,
+aMule: Solaris, *MacOSX and *Win32 (*soon). It was originally forked from
+aMule: the xMule project, which in turn was forked from the lMule project.
+aMule:
+aMule:
+aMule:
+aMule:
+aMule: Package created by Niki Kovacs <info@microlinux.fr>
