@@ -1,0 +1,1 @@
+easytag-*.tar.xz
