@@ -1,0 +1,12 @@
+       |-----handy-ruler------------------------------------------------------|
+easytag: EasyTAG (Tag editor for MP3 and Ogg Vorbis files)
+easytag:
+easytag: EasyTAG is a utility for viewing and editing tags for MP3, MP2, FLAC
+easytag: Ogg Vorbis, MP4/AAC, MusePack and Monkey's Audio files. Its simple
+easytag: and nice GTK2 interface makes tagging easier under GNU/Linux.
+easytag:
+easytag: 
+easytag:
+easytag:
+easytag:
+easytag: Package created by Niki Kovacs <info@microlinux.fr>
