@@ -1,0 +1,12 @@
+          |-----handy-ruler------------------------------------------------------|
+gtkcdlabel: gtkcdlabel (GUI frontend to Cdlabelgen)
+gtkcdlabel:
+gtkcdlabel: Gtkcdlabel is a GUI frontend to Cdlabelgen, a program that can 
+gtkcdlabel: generate a variety of CD tray covers.
+gtkcdlabel: 
+gtkcdlabel: 
+gtkcdlabel: 
+gtkcdlabel:
+gtkcdlabel: 
+gtkcdlabel: 
+gtkcdlabel: Package created by Niki Kovacs <info@microlinux.fr>
